# roku_tui

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  claude --resume sqlite-sqlalchemy-i.txt  entry.py  main.py  pyproject.toml  roku_tui.spec  roku_tui.tcss
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: automation.md  branding.md  development.md  ecp-protocol.md  macros.md  manifesto.md  themes.md  troubleshooting.md
docs/demo/: demo_script.md  youtube_metadata.md
docs/plans/: test-suite-accuracy.md
docs/release_notes/: v0.5.3.md  v0.5.4.md
roku_tui/: __main__.py  actions.py  app.py  constants.py  mascot.py  service.py  service_yt.py  themes.py
roku_tui/commands/: db_commands.py  handlers.py  registry.py  suggester.py  tips.py  tui_commands.py
roku_tui/commands/handlers/: __init__.py  apps.py  base.py  fun.py  navigation.py  system.py
roku_tui/db/: database.py  queries.py  schema.py  seeds.py
roku_tui/db/queries/: __init__.py  apps.py  commands.py  devices.py  macros.py  network.py
roku_tui/ecp/: client.py  discovery.py  mock.py  models.py
roku_tui/styles/: console.tcss  discovery.tcss  global.tcss  guide.tcss  inspector.tcss  modals.tcss  remote.tcss  status_bar.tcss  tabs.tcss  tour.tcss
roku_tui/widgets/: __init__.py  about_screen.py  console_panel.py  discovery_screen.py  guide_screen.py  help_screen.py  network_inspector.py  network_panel.py  remote_panel.py  repl_panel.py  status_bar.py  tour_screen.py
scripts/: build-local.sh
tests/: test_actions.py  test_app.py  test_apps_handlers_extra.py  test_console_panel.py  test_database.py  test_db_commands.py  test_discovery.py  test_discovery_screen.py  test_ecp_client.py  test_fun_handlers.py  test_handlers.py  test_help_screen.py  test_integration.py  test_main.py  test_mascot.py  test_mock_client.py  test_modal_interactions.py  test_network_inspector.py  test_registry.py  test_service.py  test_service_extra.py  test_service_yt_client.py  test_suggester.py  test_system_handlers.py  test_tui_commands.py  test_ui.py  test_widget_interactions.py  test_widgets.py  test_yt_handlers.py
