[project]
name = "roku-tui"
version = "0.3.0"
description = "Roku remote control as a terminal console — learn the terminal and HTTP at the same time"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.9.6",
    "sqlalchemy>=2.0.49",
    "textual>=8.2.3",
]

[project.scripts]
roku-tui = "roku_tui.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "textual-dev>=1.8.0",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "B008",   # do not perform function calls in default arguments
    "SIM108", # ternary operator — often less readable than if/else
    "RUF001", # ambiguous unicode — × in UI strings is intentional
]

[tool.ruff.lint.per-file-ignores]
"roku_tui/widgets/help_screen.py" = ["E501"]  # Rich markup template strings

[tool.ruff.lint.isort]
known-first-party = ["roku_tui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true     # third-party libs without stubs (textual, sqlalchemy partial)
warn_return_any = true
warn_unused_ignores = true
pretty = true

[[tool.mypy.overrides]]
module = ["roku_tui.widgets.*", "roku_tui.commands.*"]
# Textual widget methods use Any-typed context patterns by design
disallow_any_explicit = false

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
